# aave-liquidation-model

./: Extractor_v2_v3_.ipynb  Model_v2_v3_.ipynb  README.md  pyproject.toml
data/: b1.csv  b12_v3.csv  b1_v3.csv  b2.csv  b21_debt_stables.csv  b21_debt_stables_v3.csv  b2_v3.csv  b3.csv  b31_eth_wbtc_stables.csv  b31_eth_wbtc_stables_v3.csv  b3_v3.csv  steth_aave.csv  steth_aave_v3.csv
utils/: CurveSim.py  aSTETH.json  constants.py  extractor_v2.py  extractor_v3.py  model23.py  poolDF_cg.csv
